--- a/playground/gradle/libs.versions.toml
+++ b/playground/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ kafka = "3.9.0"
 
 [libraries]
 kafka = { module = "org.apache.kafka:kafka_2.13", version.ref = "kafka" }
+kafka-streams = { module = "org.apache.kafka:kafka-streams", version.ref = "kafka" }
 
 junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
 junit-api = { module = "org.junit.jupiter:junit-jupiter-api"}
