Add customer model and update KTable demo with 3 party join

--- a/docker/kafka.yaml
+++ b/docker/kafka.yaml
@@ -26,6 +26,7 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
       KAFKA_NUM_PARTITIONS: 1
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+#      KAFKA_LOG_RETENTION_MINUTES: 10
     volumes:
       - "$HOST_KAFKA_DIR/data:/tmp"
       - "$HOST_KAFKA_DIR/out:/out"
